# KirpichMessanger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_CHECKLIST.md  Makefile  README.md  SUMMARY.md
backend/: .env.example  Dockerfile  go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/handlers/: auth.go  calls.go  channels.go  chats.go  code.go  crypto.go  messages.go  rss.go  subscription.go  temp_roles.go  users.go  websocket.go  wiki.go
backend/internal/middleware/: correlation.go  error.go  lastseen.go  metrics.go  ratelimit.go  validation.go
backend/internal/models/: auth.go  call.go  chat.go  code.go  crypto.go  message.go  rss.go  (+4 more)
backend/tests/: auth_test.go  call_test.go  crypto_test.go  dm_test.go  media_test.go  user_test.go  websocket_test.go
config/: postgres.conf  redis.conf
database/: migration_v2.sql  schema.sql
deploy/: .env.example  Caddyfile  coturn.conf  docker-compose.yml  prometheus.yml  setup.sh
deploy/systemd/: messenger-api.service  messenger-db.service  messenger-redis.service  messenger-turn.service  messenger.target
docs/: API.md  CALLS.md  DEPLOYMENT_GUIDE.md  FEATURES.md  README.md  ROADMAP.md  TDD.md  UPGRADE.md
messenger-desktop/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
messenger-desktop/src/: app.d.ts
messenger-desktop/src-tauri/: Cargo.toml  tauri.conf.json
messenger-desktop/src-tauri/icons/: README.md
messenger-desktop/src-tauri/src/: commands.rs  main.rs  system_tray.rs  window.rs
scripts/: README.md  cleanup.sh  health-check.sh  migrate.sh
(+26 files in other folders)
