[package]
name = "kirpich-messenger-desktop"
version = "0.1.0"
description = "KirpichMessanger desktop client"
authors = ["KirpichMessanger Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all", "system-tray", "updater"] }
thiserror = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
