[package]
name = "kirpich-messenger-desktop"
version = "0.1.0"
description = "KirpichMessenger Desktop Client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"

[features]
default = ["custom-protocol", "system-tray"]
custom-protocol = ["tauri/custom-protocol"]
system-tray = ["tauri/system-tray"]

[dev-dependencies]
